# pyproject-pip

./: .gitignore  LICENSE  README.md  details.txt  pyproject.toml  requirements.txt
src/pyproject_pip/: __about__.py  __init__.py  cli.py  create.py  pypip.py
tests/: __init__.py  test_create.py  test_pypip.py
